--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -23,3 +23,32 @@
     flex-wrap: wrap;
     gap: 15px;
 }
+
+.Dashboard{
+    display: flex;
+}
+aside{
+    display: flex;
+    flex-direction: column;
+    align-items: center ;
+    border-right: 1px solid rgb(212, 212, 212);
+    padding: 20px;
+    box-sizing: border-box;
+    height: 100vh;
+    max-width: 15vw;
+}
+aside>img{
+    width: 12vw;
+    height: 12vw;
+    border: 1px solid #d6d2d2;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 2px 2px 5px #d6d2e8;
+}
+aside>h2{
+    text-align: center;
+    margin-bottom: 0px;
+}
+main{
+    padding: 10px;
+}
