--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,54 +1,55 @@
 /* Home page style  */
 
-.Home{
-    text-align: center;
-    background-color: #f5f5f5;
-    height:100vh
+.Home {
+  text-align: center;
+  background-color: #f5f5f5;
+  height: 100vh;
 }
 
-.Home>h1{
-    margin:  0px;
+.Home > h1 {
+  margin: 0px;
 }
 
-.Home__roles{
-    margin: 10px 0px;
-    padding: 10px 10px 40px 10px;
-    background-color: #f5f5f5;
+.Home__roles {
+  margin: 10px 0px;
+  padding: 10px 10px 40px 10px;
+  background-color: #f5f5f5;
 }
 
-.Home__bar{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 15px;
+.Home__bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px;
 }
 
-.Dashboard{
-    display: flex;
+.Dashboard {
+  display: flex;
 }
-aside{
-    display: flex;
-    flex-direction: column;
-    align-items: center ;
-    border-right: 1px solid rgb(212, 212, 212);
-    padding: 20px;
-    box-sizing: border-box;
-    height: 100vh;
-    max-width: 15vw;
+aside {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-right: 1px solid rgb(212, 212, 212);
+  padding: 20px;
+  box-sizing: border-box;
+  height: 100vh;
+  max-width: 15vw;
 }
-aside>img{
-    width: 12vw;
-    height: 12vw;
-    border: 1px solid #d6d2d2;
-    border-radius: 50%;
-    object-fit: cover;
-    box-shadow: 2px 2px 5px #d6d2e8;
+aside > img {
+  width: 12vw;
+  height: 12vw;
+  border: 1px solid #d6d2d2;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 2px 2px 5px #d6d2e8;
 }
-aside>h2{
-    text-align: center;
-    margin-bottom: 0px;
+aside > h2 {
+  text-align: center;
+  margin-bottom: 0px;
 }
-main{
-    padding: 10px;
+main {
+  padding: 10px;
+  width: 100%;
 }
