--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -2,7 +2,7 @@
 
 .Home {
   text-align: center;
-  background-color: #f5f5f5;
+  background-color: #f1f1f1;
   height: 100vh;
 }
 
@@ -13,7 +13,7 @@
 .Home__roles {
   margin: 10px 0px;
   padding: 10px 10px 40px 10px;
-  background-color: #f5f5f5;
+  background-color: #f1f1f1;
 }
 
 .Home__bar {
@@ -35,15 +35,16 @@ aside {
   padding: 20px;
   box-sizing: border-box;
   height: 100vh;
-  max-width: 15vw;
+  width: 25vw;
+  max-width: 30vw;
 }
 aside > img {
   width: 12vw;
   height: 12vw;
-  border: 1px solid #d6d2d2;
+  border: 1px solid #fff;
   border-radius: 50%;
   object-fit: cover;
-  box-shadow: 2px 2px 5px #d6d2e8;
+  box-shadow: 6px 6px 12px #d6d2e8, -6px -6px 12px #fff;
 }
 aside > h2 {
   text-align: center;
