--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -41,3 +41,15 @@ main {
   padding: 10px;
   width: 100%;
 }
+
+@media screen and (max-width: 600px) {
+  .Dashboard {
+    flex-direction: column;
+  }
+  aside {
+    width: 100%;
+    height: 100%;
+    border-right: none;
+    box-shadow: 2px 2px 5px #c5c5c5;
+  }
+}
