--- a/src/components/doctor/Doctor.css
+++ b/src/components/doctor/Doctor.css
@@ -1,54 +1,56 @@
-.Doctor{
-    width: 90%;
-    margin: auto;
+.Doctor {
+  width: 90%;
+  margin: auto;
 }
 
-.Doctor__main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    margin-top: 20px;
+.Doctor__main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
 }
 
-.Doctor__main-search{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid #c5c5c5;
-    border-radius: 2rem;
-    padding: 6px;
+.Doctor__main-search {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #c5c5c5;
+  border-radius: 2rem;
+  padding: 6px;
+  min-width: 70%;
 }
 
-.Doctor__main-search input{
-    border: none;
-    width: 30vw;
-    padding: 8px;
+.Doctor__main-search input {
+  border: none;
+  width: 30vw;
+  min-width: 70%;
+  padding: 8px;
 }
-.Doctor__main-search input:focus{
-    outline: none;
-}
-
-.Doctor__main-search button{
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
+.Doctor__main-search input:focus {
+  outline: none;
 }
 
-.Doctor__main #addP{
-    background-color: transparent;
-    border: none;
-    border-radius: 50%;
-    color: var(--primary);
-    padding: 2rem; 
-    cursor: pointer;
-    box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #fff;
-    transition: all 0.1s ease-in;
+.Doctor__main-search button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
-.Doctor__main #addP:hover{
-    background-color: var(--primary);
-    color: #fff;
-    box-shadow: 2px 2px 6px #c5c5c5, -2px -2px 6px #fff;
+.Doctor__main #addP {
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+  color: var(--primary);
+  padding: 2rem;
+  cursor: pointer;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #fff;
+  transition: all 0.1s ease-in;
+}
+
+.Doctor__main #addP:hover {
+  background-color: var(--primary);
+  color: #fff;
+  box-shadow: 2px 2px 6px #c5c5c5, -2px -2px 6px #fff;
 }
