--- a/src/components/pop/Pop.css
+++ b/src/components/pop/Pop.css
@@ -1,46 +1,82 @@
-.Pop{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.473);
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.Pop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.473);
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
-.Pop__main{
-    width: 60vw;
-    height: 70vh;
-    background-color: white;
-    border-radius: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-y: scroll;
+.Pop__main {
+  position: relative;
+  width: 60vw;
+  min-width: 300px;
+  height: 70vh;
+  background-color: white;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: scroll;
 }
 
-.Pop__main::-webkit-scrollbar-track{
-    width: 5px;
+.Pop__main::-webkit-scrollbar-track {
+  width: 5px;
+}
+.Pop__main .close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
 }
 
-.Pop__main form{
-    width: 90%;
-    margin: auto;
+.Pop__main form {
+  width: 90%;
+  margin: auto;
 }
 
-.fItem{
-    margin-top: 5px;
+.fItem {
+  margin-top: 10px;
 }
 
-
-.fItem input:not([type="checkbox"]):not([type="radio"]), textarea{
-    width: 100%;
-    border: 1px solid #c5c5c5
+.fItem input,
+textarea {
+  border-radius: 0.5em;
+  padding: 5px;
+}
+input:placeholder-shown {
+  font-style: italic;
 }
 
+.fItem input:not([type="checkbox"]):not([type="radio"]),
+textarea {
+  width: 100%;
+  border: 1px solid #c5c5c5;
+}
 
-
+.Pop__main form > button {
+  padding: 7px;
+  margin: 10px 0px;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  border: 1px solid var(--primary);
+  box-shadow: 2px 2px 5px #a7a6a6;
+  transition: all 0.4s ease;
+}
+.Pop__main form > button[type="submit"] {
+  background-color: var(--primary);
+  color: #fff;
+}
+.Pop__main form > button[type="cancel"] {
+  background-color: #fff;
+  color: var(--primary);
+  margin-left: 5px;
+}
+.Pop__main form > button:hover {
+  box-shadow: 1px 1px 3px #c5c5c5;
+}
