--- a/src/components/doctor/Doctor.css
+++ b/src/components/doctor/Doctor.css
@@ -56,3 +56,19 @@
   color: #fff;
   box-shadow: 2px 2px 6px #c5c5c5, -2px -2px 6px #fff;
 }
+
+.Doctor__main--pInfo{
+  display: none;
+  width:90%;
+  border-bottom: 1px solid #c5c5c5;
+  padding-bottom: 20px;
+}
+
+.Doctor__main--card>.card{
+  border: 1px solid #c5c5c5;
+    padding: 10px;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    background: var(--primary);
+    color: white;
+}
